uebung117/main.tf
locals {
  az_a = "${var.region}a"
  az_b = "${var.region}b"
  az_c = "${var.region}c"

  cidr_a = "10.0.1.0/24"
  cidr_b = "10.0.2.0/24"
  cidr_c = "10.0.3.0/24"
}


# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "TF VPC"
  }
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/subnet
resource "aws_subnet" "subnet_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = local.cidr_a
  availability_zone       = local.az_a
  map_public_ip_on_launch = true

  tags = {
    Name = "TF Subnet A"
  }
}

resource "aws_subnet" "subnet_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = local.cidr_b
  availability_zone       = local.az_b
  map_public_ip_on_launch = true

  tags = {
    Name = "TF Subnet B"
  }
}

resource "aws_subnet" "subnet_c" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = local.cidr_c
  availability_zone       = local.az_c
  map_public_ip_on_launch = true
  tags                    = {
    Name                  = "HA 117 Subnet C"
  }
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "TF Internet Gateway"
  }
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "TF Route Table"
  }
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table_association
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet_a.id
  route_table_id = aws_route_table.rt.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.subnet_b.id
  route_table_id = aws_route_table.rt.id
}

resource "aws_route_table_association" "c" {
  subnet_id      = aws_subnet.subnet_c.id
  route_table_id = aws_route_table.rt.id
}

# -----------------------------------------------------------------------------------
# EC2 Instanz zum Testen des Setupt

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
resource "aws_security_group" "sg" {
  name = "tf_sg"
  description = "Allow SSH inbound traffic"
  vpc_id = aws_vpc.main.id

  ingress {
    description = "SSH from VPC"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/instance

resource "aws_instance" "test" {
  for_each = {
    "a" = aws_subnet.subnet_a.id
    "b" = aws_subnet.subnet_b.id
    "c" = aws_subnet.subnet_c.id
  }

  ami                    = "ami-065ab11fbd3d0323d"
  instance_type          = "t2.micro"
  subnet_id              = each.value
  vpc_security_group_ids = [aws_security_group.sg.id]
  key_name               = "aws_mr"
  tags                   = {
    Name = "HA 117 ${each.key}"
  }
}

  
# resource "aws_instance" "test" {
#   ami                    = "ami-065ab11fbd3d0323d"
#   instance_type          = "t2.micro"
#   subnet_id              = aws_subnet.subnet_c.id
#   vpc_security_group_ids = [aws_security_group.sg.id]
#   key_name               = "aws_mr"
#   tags                   = {
#     Name = "HA 117"
#   }
# }
